Fix highlight div overflow

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -145,6 +145,7 @@ strong {
     margin: 2rem 0 2rem;
     padding: 1rem;
     border-radius: 1rem;
+    overflow: auto;
   }
 }
 
